Actualizar el flujo de trabajo del DAG para la extracción de datos de ligas de fútbol, añadiendo tareas de validación y agrupación por liga.

--- a/Football_leagues.ipynb
+++ b/Football_leagues.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "353d22ac",
    "metadata": {
     "scrolled": true
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "afda70f2",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
          "type": "string"
         }
        ],
-       "ref": "df3e0ffe-4bf3-4053-b108-16723dbe119d",
+       "ref": "aaa4d820-dbe0-436e-8ed3-1c9d2ece723c",
        "rows": [
         [
          "0",
@@ -177,7 +177,7 @@
        "6     HOLANDA  https://www.espn.com.co/futbol/posiciones/_/li..."
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "602495ac",
    "metadata": {},
    "outputs": [],
@@ -2663,13 +2663,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7d4063a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "LIGA",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "592e4e61-9e0b-40dd-9667-19e29c1338b9",
+       "rows": [
+        [
+         "0",
+         "ESPAÑA"
+        ],
+        [
+         "1",
+         "INGLATERRA"
+        ],
+        [
+         "2",
+         "ITALIA"
+        ],
+        [
+         "3",
+         "GERMANY"
+        ],
+        [
+         "4",
+         "FRANCIA"
+        ],
+        [
+         "5",
+         "PORTUGAL"
+        ],
+        [
+         "6",
+         "HOLANDA"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 7
+       }
+      },
+      "text/plain": [
+       "0        ESPAÑA\n",
+       "1    INGLATERRA\n",
+       "2        ITALIA\n",
+       "3       GERMANY\n",
+       "4       FRANCIA\n",
+       "5      PORTUGAL\n",
+       "6       HOLANDA\n",
+       "Name: LIGA, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.read_csv('df_ligas.csv')"
+    "ligas_df = pd.read_csv('df_ligas.csv')\n",
+    "ligas_df.iterrows()\n",
+    "ligas_df['LIGA']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1801f058",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2683,36 +2760,6 @@
     "df_final = df_final[['ID_TEAM','EQUIPO', 'J', 'G', 'E', 'P', 'GF', 'GC', 'DIF', 'PTS', 'LIGA',\n",
     "       'CREATED_AT']]\n",
     "df_final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0df4bce2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_final.to_csv('premier_positions.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a7d85c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lista_resultado[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d172c718",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hash('hola')"
    ]
   },
   {
